tests/funs/neg/test0-unsafe.i
main(){
  x := 0;
  y := x - 1;
  assert POS: (0 < y);
}
